--- a/force-app/main/default/lwc/bike/bike.html
+++ b/force-app/main/default/lwc/bike/bike.html
@@ -1,4 +1,4 @@
-<!-- bike.html this is just by git changes -->
+<!-- bike.html -->
 <template>
     <img src={bike.picture} alt="bike picture" />
     <p>{bike.name}</p>
